Fix: menu responsivo (z-index)

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -190,14 +190,15 @@
     padding-left: 1.25rem;
     position: fixed;
     background-color: white;
-    z-index: 100;
+    z-index: 1000;
   }
   #header {
     width: 300px; 
+    height: 112px;
     padding-left: 1.25rem;
     position: fixed;
     background-color: var(--bg-primary);
-    z-index: 100;
+    z-index: 1000;
   }
   .arrow_header_responsive {
     cursor: pointer;
