--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,7 +13,7 @@
 }
 
 .avatar {
-  @apply flex items-center gap-8 bg-[var(--bg-primary)] w-[25%] h-full py-4 px-10 shadow-lg text-white font-medium;
+  @apply flex items-center gap-8 bg-[var(--bg-primary)] w-[25%] h-full py-4 px-10 shadow-lg text-white font-medium relative;
   z-index: 1;
 }
 
@@ -80,7 +80,7 @@
   @apply overflow-y-auto lg:overflow-y-scroll h-full;
 
   @media screen and (min-width: 1024px) {
-    height: calc(100vh - 112px - 112px);
+    height: calc(100vh - 112px);
   }
 }
 
